2014-07-31  Per Bothner  <per@bothner.com>

	* Expression.java (maybeSetLine): New method.

2014-07-27  Per Bothner  <per@bothner.com>

	* GenericProc.java (isApplicable): Update to support splicing.
	* PrimProcedure.java (isApplicable); Likewise.

2014-07-21  Per Bothner  <per@bothner.com>

	Handle "lenient conversions" using "lenient required types".
	* InlineCalls.java (class LenientExpectedType): New class.
	* LambdaExp.java (maybeSetReturnType): New static method.

	Tweak helper methods for constructing loop expressions.
	* Compilation.java (loopBegin) Add return value.
	(loopRepeat, loopDone): New methods.
	(loopRepeatDone): Renamed from old loopDone.
	(loopBody, loopCond): Deprecated.
	* Expression.java (makeWhile): Update to use loopRepeatDone.

2014-07-20  Per Bothner  <per@bothner.com>

	* Language.java (getTypeFor): Improvements in extracting a type
	from colon-notation and aliases.
	(getTypeFor): New private static method.

2014-07-07  Matthieu Vachon <matthieu.o.vachon@gmail.com>

	* ApplyExp.java (compilerMethodType): Fix typo in non-invoke case.

2014-07-06  Per Bothner  <per@bothner.com>

	* LambdaExp.java (getMethod): Add separate count of splices.
	(validateApply): Check for splices.
	* PrimProcedure.java: Likewise.
	* QuoteExp.java: Likewise.
	* ApplyExp.java: Likewise.

	* Declaration.java (maybeIndirectBinding): Don't set indirect
	if TYPE_SPECIFIED. Fixes Savannah bug #42689
	'Bytecode verify error involving use of "location"'.

2014-07-05  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (compileArgs): Handle splices if the method
	takesVarArgs.  This optimization allows a direct method invocation.
	* PrimProcedure.java: No longer implement Inlineable.
	(compile): Change to allow splice when varargs.  Change return type.
	* ApplyExp (inlineCompile): Special handling for PrimProcedure.

	* PrimProcedure.java (explicitArrayAsVarArgsAllowed): New flag.
	Used to enable compatibility kludge for varargs arrays.
